--- a/AuthService/AuthService/src/main/resources/application.properties
+++ b/AuthService/AuthService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=AuthService
+spring.application.name=AUTHSERVICEAPP
 spring.datasource.url=jdbc:mysql://localhost:3306/hms_authservice
 spring.datasource.username=root
 spring.datasource.password=@Utkarsh123
