--- a/microservice1/microservice1/src/main/resources/application.properties
+++ b/microservice1/microservice1/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=microservice1
+server.port=8080
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
